// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client-js"
  // output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}





enum UserRole {
  ESTATE_MANAGER
  INSPECTOR
  SAFETY_OFFICER
  TECHNICIAN
  STAFF_MEMBER
  ADMIN
  SYSTEM
}

enum UserStatus {
  ACTIVE
  INACTIVE
}


enum AssetStatus {
  ACTIVE
  INACTIVE
  UNDER_MAINTENANCE
  RETIRED
}

enum ComplianceStatus {
  COMPLIANT
  DUE_SOON
  OVERDUE
}

enum HazardStatus {
  OPEN
  IN_PROGRESS
  CLOSED
}

enum RiskStatus {
  OPEN
  MITIGATED
  CLOSED
}

enum ActionStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
}

enum Severity {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

enum Likelihood {
  RARE
  UNLIKELY
  POSSIBLE
  LIKELY
  ALMOST_CERTAIN
}

enum CAPAType {
  CORRECTIVE
  PREVENTIVE
}

enum AssetsType {
  ELECTRICAL_DEVICE 
  BOILER
  LIFT
  PRESSURE_VESSEL
  EXPLOSIVES
}

enum NotificationType {
  COMPLIANCE
  CAPA
  HAZARD
  INCIDENT
  INSPECTION
  CERTIFICATE
  APPROVAL
}

model User {
  userId      String      @id @default(cuid())
  fullName    String
  email       String      @unique
  password    String?      
  role        UserRole?
  phone       String?
  playerId     String?    @unique
  status      UserStatus  @default(ACTIVE)
  isApproved  Boolean @default(false)

  assetsCreated       Asset[]
  hazardsReported     Hazard[]
  incidentsReported   Incident[]
  mitigationAssigned  MitigationAction[]
  capaAssigned        CapaAction[] @relation("CapaAssignedTo")
  capaAssignedBy     CapaAction[] @relation("CapaAssignedBy")

  sentNotifications     Notification[] @relation("SentNotifications")
  receivedNotifications Notification[] @relation("ReceivedNotifications")
  

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Asset {
  assetId      String      @id @default(cuid())
  assetName    String
  assetType    AssetsType 
  location     String
  serialNo     String?
  status       AssetStatus @default(ACTIVE)

  createdById  String
  createdBy    User        @relation(fields: [createdById], references: [userId])

  compliances  Compliance[]
  hazards      Hazard[]
  incidents    Incident[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Compliance {
  complianceId    String           @id @default(cuid())
  complianceName  String

  assetId         String
  asset           Asset            @relation(fields: [assetId], references: [assetId])

  frequency       String
  lastDueDate     DateTime?
  dueDate         DateTime
  expireDate      DateTime?

  status          ComplianceStatus @default(COMPLIANT)

  hazards         Hazard[]

  // expiredCerts      Certificate[]
  expiredDate DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Hazard {
  hazardId           String   @id @default(cuid())

  assetId            String
  asset              Asset    @relation(fields: [assetId], references: [assetId])

  complianceId       String?
  compliance         Compliance? @relation(fields: [complianceId], references: [complianceId])

  hazardTitle        String
  hazardDescription  String

  reportedById       String
  reportedBy         User     @relation(fields: [reportedById], references: [userId])

  status             HazardStatus @default(OPEN)

  risks              Risk[]
  mitigations        MitigationAction[]
  capaActions        CapaAction[]

  createdAt          DateTime @default(now())
}

model Risk {
  riskId         String      @id @default(cuid())

  hazardId       String
  hazard         Hazard      @relation(fields: [hazardId], references: [hazardId])

  riskTitle      String

  riskDescription String

  likelihood     Likelihood @default(POSSIBLE)
  severity       Severity @default(MEDIUM)

  riskLevel      String ?
  status         RiskStatus @default(OPEN)

  incidents      Incident[]
  mitigations    MitigationAction[]
  capaActions    CapaAction[] 

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Incident {
  incidentId      String   @id @default(cuid())

  assetId         String
  asset           Asset    @relation(fields: [assetId], references: [assetId])

  riskId          String?
  risk            Risk?     @relation(fields: [riskId], references: [riskId])

  incidentTitle   String
  description     String

  incidentDate    DateTime

  severity        Severity  @default(MEDIUM)

  reportedById    String
  reportedBy      User     @relation(fields: [reportedById], references: [userId])

  status          String ?

  createdAt DateTime @default(now())
}

model MitigationAction {
  mitigationId   String   @id @default(cuid())

  riskId         String?
  risk           Risk?     @relation(fields: [riskId], references: [riskId])
  hazardId        String
  hazard         Hazard   @relation(fields: [hazardId], references: [hazardId])

  actionTitle    String

  assignedToId   String
  assignedTo     User     @relation(fields: [assignedToId], references: [userId])

  targetDate     DateTime

  status         ActionStatus @default(PENDING)

  createdAt DateTime @default(now())
}

model CapaAction {
  capaId         String   @id @default(cuid())

  riskId         String?
  risk           Risk ?    @relation(fields: [riskId], references: [riskId])
 
  hazardId        String
  hazard         Hazard   @relation(fields: [hazardId], references: [hazardId])

  actionTitle    String

  actionType     CAPAType @default(CORRECTIVE)

  assignedToId   String 
  assignedTo     User     @relation("CapaAssignedTo", fields: [assignedToId], references: [userId])
  assignedById   String?
  assignedBy     User?   @relation("CapaAssignedBy", fields: [assignedById], references: [userId])

  dueDate        DateTime

  isApproved    Boolean @default(false)
  status         ActionStatus @default(PENDING)

  createdAt DateTime @default(now())
  // @@unique([assignedById])
}



model Notification {
  notify_id     String   @id @default(uuid())

  sender_id     String
  receiver_id   String

  title         String
  content       String

  notify_type   NotificationType

  reference_id  String?


  is_read       Boolean @default(false)

  createdAt     DateTime @default(now())
  // Relations
  sender   User @relation("SentNotifications", fields: [sender_id], references: [userId], onDelete: Cascade)
  receiver User @relation("ReceivedNotifications", fields: [receiver_id], references: [userId], onDelete: Cascade)

  @@index([sender_id])
  @@index([receiver_id])
}